syntax = "proto3";

import "dac_module.proto";
import "adc_module.proto";
import "rtd_module.proto";
import "tc_module.proto";
import "keys.proto";

message EepromData {
    optional DacModule dac_module = 1;
    optional AdcModule adc1_module = 2;
    optional AdcModule adc2_module = 3;
    optional RtdModule rtd_module = 4;
    optional TcModule tc_module = 5;
    optional AwsKeys config_keys = 6;
    optional AwsKeys data_keys = 7;
    optional string serial_number = 8;
    optional string cm_part_number = 9;
    optional string tb_part_number = 10;
    optional string cm4_part_number = 11;
    optional string model = 12;
}