syntax = "proto3";

message AwsKeys {
    optional string private_key = 1;
    optional string certificate = 2;
}